name:                tiles
version:             0.1.0
license:             MIT
author:              Niklas Hambüchen <mail@nh2.me>
maintainer:          Niklas Hambüchen <mail@nh2.me>
build-type:          Simple
cabal-version:       >=1.8
homepage:            https://github.com/nh2/tiles
bug-reports:         https://github.com/nh2/tiles/issues
synopsis:						 Small Haskell gloss aplication to try out floor tile designs
description:
	Small Haskell gloss aplication to try out floor tile designs

executable tiles
  main-is:
    Main.hs
  build-depends:
      base                          >= 4.5     && < 5
    , gloss                         >= 1.8.1.2 && < 1.9
    , vector                        >= 0.10.9.1 && < 0.11
  ghc-options:
    -Wall
